initial login page

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "It is aimed at replacing the tedious paperwork that the customer and retailer’s go through. The system will collect data and store it for fast and easy reference. The system will provide users with a complete record of their purchases and payments. It will also provide information about the purchase history & pending payments. The system is thus helpful to reduce the time and complexity of maintaining the records.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "react-scripts start"
   },
   "repository": {
     "type": "git",
@@ -13,10 +14,27 @@
   "keywords": [
     "payments"
   ],
-  "author": "Raptor 9",
+  "author": "Aryanxfa",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Aryanxfa/Digital-Payments-Book/issues"
+  "dependencies": {
+    "bootstrap": "^5.2.3",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.7.0",
+    "react-scripts": "^5.0.1"
   },
-  "homepage": "https://github.com/Aryanxfa/Digital-Payments-Book#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
