--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "Aryanxfa",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.3",
+    "bcryptjs-react": "^2.4.6",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
