--- a/.eslintrc
+++ b/.eslintrc
@@ -6,14 +6,14 @@
   },
   "extends": [
     "airbnb",
-    "prettier",
     "plugin:jsx-a11y/recommended",
-    "plugin:react-hooks/recommended"
+    "plugin:react-hooks/recommended",
+    "prettier"
   ],
   "plugins": [
-    "prettier",
     "react",
-    "react-hooks"
+    "react-hooks",
+    "prettier"
   ],
   "parser": "@babel/eslint-parser",
   "parserOptions": {
@@ -31,9 +31,11 @@
     "no-shadow": 0,
     "no-console": 0,
     "comma-dangle": 0,
+    "react/jsx-key": 1,
     "import/no-cycle": 0,
-    "react/prop-types": 1,
     "no-return-assign": 0,
+    "arrow-body-style": 1,
+    "react/prop-types": 1,
     "consistent-return": 1,
     "no-param-reassign": 0,
     "react/display-name": 0,
@@ -46,28 +48,26 @@
     "react/react-in-jsx-scope": 0,
     "react/no-array-index-key": 0,
     "react/no-unused-prop-types": 1,
+    "react-hooks/rules-of-hooks": 2,
     "react/require-default-props": 0,
     "react/no-unescaped-entities": 0,
     "import/prefer-default-export": 0,
     "react/jsx-props-no-spreading": 0,
     "react/jsx-filename-extension": 0,
+    "react/jsx-curly-brace-presence": 0,
     "react/destructuring-assignment": 0,
     "import/no-extraneous-dependencies": 0,
-    "react/jsx-key": 1,
-    "react-hooks/rules-of-hooks": 2,
     "no-unused-vars": [
       1,
       {
         "ignoreRestSiblings": false
       }
     ],
-    "prettier/prettier": [
-      2,
+    "prefer-destructuring": [
+      1,
       {
-        "printWidth": 120,
-        "singleQuote": true,
-        "trailingComma": "none",
-        "tabWidth": 2
+        "object": true,
+        "array": false
       }
     ]
   }
