--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Javascript Version",
   "private": true,
   "scripts": {
-    "start": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx ./src",
